# Automated_Testing_Appium_Server

./: .gitignore  README.md  base.resource  pyproject.toml
resource/locators/: interestLocators.yml  searchLocators.yaml  welcomeLocators.yml
resource/pages/: homePage.resource  interestPage.resource  resultSearchPage.resource  searchPage.resource  welcomePage.resource
resource/utils/: customKeywords.resource  openApp.resource
test/: AccessApp.robot  SearchVideo.robot  SurpriseMe.robot  Ted.robot
