[tool.poetry]
name = "appium"
version = "0.1.0"
description = "Automação Mobile Com Appium e Robot Framework"
authors = ["Reginaldo Araujo <reginaldo.dearaujo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^7.0"
robotframework-appiumlibrary = "2.15.0"
appium-python-client = "3.2.1"
docutils = "0.20.1"
PyYAML = "6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
